# FIM_Eikonal

./: LICENSE  README.md  build.sh
SCI-Solver_Eikonal/src/: CMakeLists.txt
SCI-Solver_Eikonal/src/core3d/cuda/: meshFIM3dEikonal.cu
example/: box.vtu  convertResultToVtu.m  readTetFimBinary.m  result.vtu  run.sh  run_bwUniCluster2.sh  seeds.txt
tetFIM/: CMakeLists.txt
tetFIM/src/: Matrix3.h  Vector3.h  main.cu
tetFIM/tetFIM.xcodeproj/: project.pbxproj
tetFIM/tetFIM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tetFIM/tetFIM.xcodeproj/project.xcworkspace/xcuserdata/steffen.xcuserdatad/: UserInterfaceState.xcuserstate
tetFIM/tetFIM.xcodeproj/xcuserdata/steffen.xcuserdatad/xcschemes/: xcschememanagement.plist
